--- a/FinalProject-Bagatua,Restauro/style.css
+++ b/FinalProject-Bagatua,Restauro/style.css
@@ -20,6 +20,9 @@ header nav {
     justify-content: space-between;
     align-items: center;
 }
+.fa-bars{
+    color: #fff;
+}
 #navbutton {
     height: 80px;
     width: 100%;
@@ -28,6 +31,7 @@ header nav {
     background-color: white;
     cursor: pointer;
     border-bottom: 5px solid #8de12f;
+    background: linear-gradient(to left, #8de12f, #000070);
 }
 #navbutton:hover {
     color: white;
@@ -585,6 +589,9 @@ footer .fspan3 b {
         flex-direction: column-reverse;
         align-items: normal;
         justify-content: space-between;
+    }
+    #headernav{
+        display: none;
     }
     header nav span {
         display: none;
